Color code sleep duration text

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,7 +21,14 @@
     margin-bottom: 0;
 
     td {
-      border-top: 0
+      border-top: 0;
+      padding-top: 0;
+      padding-bottom: 0;
+      vertical-align: middle;
+    }
+
+    tr {
+      height: 2.6rem
     }
   }
 
