Test authentication with feature spec

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -16,7 +16,7 @@
           <a class="nav-item nav-link" href=<%= sleep_reports_path %>>Sleep</a>
         </li>
       </ul>
-      <%= link_to "Logout", logout_path, method: :delete, class: "btn btn-outline-light" %>
+      <%= link_to "Log Out", logout_path, method: :delete, class: "btn btn-outline-light" %>
     </div>
   <% end %>
 </nav>
