--- a/app/views/cardio_reports/index.html.erb
+++ b/app/views/cardio_reports/index.html.erb
@@ -12,7 +12,7 @@
   <br>
   <% if (days_since_previous_cardio(cardio_report) || 0) >= 7 %>
     <div class="card card-banner <%= days_since_previous_cardio(cardio_report) < 30 ? 'alert-warning' : 'alert-danger' %>">
-      <p>No running <b><%= days_since_previous_cardio(cardio_report) %></b> days</p>
+      <p><b><%= days_since_previous_cardio(cardio_report) %></b> days</p>
     </div>
     <br>
   <% end %>
