--- a/app/views/sleep_reports/index.html.erb
+++ b/app/views/sleep_reports/index.html.erb
@@ -16,7 +16,7 @@
   <br>
   <% if (days_since_previous_sleep(sleep_report) || 0) >= 2 %>
     <div class="card card-banner card-cap-bg">
-      <p>Missing <b><%= days_since_previous_sleep(sleep_report) - 1%></b> days</p>
+      <p><b><%= days_since_previous_sleep(sleep_report) - 1%></b> days</p>
     </div>
     <br>
   <% end %>
