Refactor duration into a class

--- a/app/views/cardio_reports/_cardio_card.html.erb
+++ b/app/views/cardio_reports/_cardio_card.html.erb
@@ -30,7 +30,7 @@
       <td>Calories</td>
     </tr>
     <tr>
-      <td><b><%= cardio_report.duration_time.strftime('%M:%S') %></b></td>
+      <td><b><%= cardio_report.duration.strftime('%M:%S') %></b></td>
       <td><b><%= '%.1f' % cardio_report.distance_miles %></b> miles</td>
       <td><b><%= '%.1f' % cardio_report.speed %></b> mph</td>
       <td><b><%= cardio_report.calories.to_i %></b> kcal</td>
