--- a/app/views/sleep_reports/index.html.erb
+++ b/app/views/sleep_reports/index.html.erb
@@ -3,7 +3,7 @@
 <%= alert_sleep_report_reminder %>
 
 <%= link_to 'New Sleep Report', new_sleep_report_path, class: "btn btn-outline-primary" %>&nbsp;
-<% if @sleep_reports.latest.complete? %>
+<% if @sleep_reports.latest&.complete? %>
   <%= link_to 'Start Sleep', start_sleep_reports_path, method: :post, class: "btn btn-success" %>
 <% else %>
   <%= link_to 'Stop Sleep', stop_sleep_reports_path, method: :patch, class: "btn btn-danger" %>
