--- a/app/views/sleep_reports/_sleep_card.html.erb
+++ b/app/views/sleep_reports/_sleep_card.html.erb
@@ -31,9 +31,9 @@
         <td style='color: <%= sleep_duration_color_style(sleep_report.duration) %>; font-size: 22px'>
           <b><%= sleep_report.duration.strftime('%-H:%M') %></b>
         </td>
-        <% if @sleep_reports.accuracy(sleep_report) &.> 0.8 %>
-          <td style='color: <%= sleep_duration_color_style(@sleep_reports.exp_avg(sleep_report)) %>; font-size: 22px'>
-            <b><%= @sleep_reports.exp_avg(sleep_report).strftime('%-H:%M')%></b>
+        <% if sleep_report.exp_avg_accuracy &.> 0.8 %>
+          <td style='color: <%= sleep_duration_color_style(sleep_report.exp_avg) %>; font-size: 22px'>
+            <b><%= sleep_report.exp_avg.strftime('%-H:%M')%></b>
           </td>
         <% end %>
       <% end %>
