Change column name to "Restedness"

--- a/app/views/sleep_reports/_sleep_card.html.erb
+++ b/app/views/sleep_reports/_sleep_card.html.erb
@@ -22,7 +22,7 @@
       <td>Asleep</td>
       <td>Wakeup</td>
       <td>Duration</td>
-      <td>Rest</td>
+      <td>Restedness</td>
     </tr>
     <tr>
       <td><b><%= sleep_report.asleep_at.strftime('%I:%M %p') %></b></td>
