--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,8 +22,7 @@
 
     td {
       border-top: 0;
-      padding-top: 0;
-      padding-bottom: 0;
+      padding: 0;
       vertical-align: middle;
       text-align: center;
     }
