Change gap cards

--- a/app/views/cardio_reports/index.html.erb
+++ b/app/views/cardio_reports/index.html.erb
@@ -11,9 +11,9 @@
 <% @cardio_reports.ordered_by_recency.reverse.each do |cardio_report| %>
   <%= render 'cardio_card', cardio_report: cardio_report %>
   <br>
-  <% if (cardio_report.days_since_previous || 0) >= 7 %>
+  <% if (cardio_report.days_since_previous || 0) >= 8 %>
     <div class="card card-banner <%= cardio_report.days_since_previous < 30 ? 'alert-warning' : 'alert-danger' %>">
-      <p><b><%= cardio_report.days_since_previous %></b> days</p>
+      <p>Missing <b><%= cardio_report.days_since_previous - 1 %></b> days</p>
     </div>
     <br>
   <% end %>
