Create metrics tab for cardio reports

--- a/app/views/weight_reports/index.html.erb
+++ b/app/views/weight_reports/index.html.erb
@@ -4,7 +4,7 @@
 
 <ul class="nav nav-tabs">
   <li class="nav-item">
-    <a class="nav-link active" href="#table" data-toggle="tab">Reports</a>
+    <a class="nav-link active" href="#reports" data-toggle="tab">Reports</a>
   </li>
   <li class="nav-item">
     <a class="nav-link" href="#metrics" data-toggle="tab" onclick="renderWeightPlot()">Metrics</a>
@@ -13,7 +13,7 @@
 <br>
 
 <div class="tab-content">
-  <div id="table" class="tab-pane active show">
+  <div id="reports" class="tab-pane active show">
     <%= link_to 'New Weight Report', new_weight_report_path, class: "btn btn-outline-primary" %>
     <br><br>
 
