Refactor weight tabs

--- a/app/views/cardio_reports/index.html.erb
+++ b/app/views/cardio_reports/index.html.erb
@@ -14,9 +14,9 @@
 
 <div class="tab-content">
   <div id="reports" class="tab-pane active show">
-    <%= render 'reports' %>
+    <%= render "reports" %>
   </div>
   <div id="metrics" class="tab-pane">
-    <%= render 'metrics' %>
+    <%= render "metrics" %>
   </div>
 </div>
