Display alert for low sleep restedness score

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,6 @@
 <h1><b>Self-Metrics</b></h1>
 
+<%= alert_sleep_restedness_low %>
 <%= alert_weight_report_reminder %>
 <%= alert_cardio_report_reminder %>
 <%= alert_sleep_report_reminder %>
