--- a/app/views/sleep_reports/_card.html.erb
+++ b/app/views/sleep_reports/_card.html.erb
@@ -33,7 +33,7 @@
         </td>
         <% if sleep_report.restedness_exp_avg_accuracy &.> 0.8 %>
           <td style='color: <%= restedness_score_color_style(sleep_report.restedness_exp_avg) %>; font-size: 28px'>
-            <b><%= sleep_report.restedness_exp_avg.round %></b>
+            <b><%= sleep_report.restedness_exp_avg.round %></b>%
           </td>
         <% end %>
       <% end %>
