Change run cardio type icon

--- a/app/views/cardio_reports/_card.html.erb
+++ b/app/views/cardio_reports/_card.html.erb
@@ -5,7 +5,7 @@
         <% if cardio_report.activity_type == 'treadmill' %>
           &nbsp<span class="badge badge-light"><%= image_tag("icons8-treadmill-30.png", size:"15x15", title: "Treadmill") %></span>
         <% else %>
-          &nbsp<span class="badge badge-light"><%= image_tag("icons8-sun-30.png", size:"15x15",  title: "Outdoors") %></span>
+          &nbsp<span class="badge badge-light"><%= image_tag("icons8-running-30.png", size:"15x15",  title: "Outdoors") %></span>
         <% end %>
       </div>
       <div class="col-7 text-center">
