--- a/app/views/cardio_reports/_card.html.erb
+++ b/app/views/cardio_reports/_card.html.erb
@@ -4,9 +4,9 @@
       <div class="col text-left">
         <% if cardio_report.activity_type == 'treadmill' %>
           <%= image_tag("icons8-treadmill-96.png", size:"24x24", title: "Treadmill") %>
-        <% elsif cardio_report.activity_type == 'run' %>
+        <% elsif cardio_report.activity_type == 'running' %>
           <%= image_tag("icons8-running-96.png", size:"24x24",  title: "Run") %>
-        <% elsif cardio_report.activity_type == 'hike' %>
+        <% elsif cardio_report.activity_type == 'hiking' %>
           <%= image_tag("icons8-trekking-96.png", size:"24x24",  title: "Hike") %>
         <% end %>
       </div>
