--- a/app/views/cardio_reports/_card.html.erb
+++ b/app/views/cardio_reports/_card.html.erb
@@ -3,11 +3,11 @@
     <div class="row align-items-center">
       <div class="col text-left">
         <% if cardio_report.activity_type == 'treadmill' %>
-          <%= image_tag("icons8-treadmill-96.png", size:"24x24", title: "Treadmill") %>
+          <%= image_tag("icons8-treadmill-96.png", size:"24x24") %>
         <% elsif cardio_report.activity_type == 'running' %>
-          <%= image_tag("icons8-running-96.png", size:"24x24",  title: "Run") %>
+          <%= image_tag("icons8-running-96.png", size:"24x24") %>
         <% elsif cardio_report.activity_type == 'hiking' %>
-          <%= image_tag("icons8-trekking-96.png", size:"24x24",  title: "Hike") %>
+          <%= image_tag("icons8-trekking-96.png", size:"24x24") %>
         <% end %>
       </div>
       <div class="col-auto text-center">
