--- a/app/views/cardio_reports/_form.html.erb
+++ b/app/views/cardio_reports/_form.html.erb
@@ -9,16 +9,16 @@
   <label>Type</label>
   <div class="row">
     <div class="btn-group btn-group-toggle d-flex mb-3 col-lg-4" data-toggle="buttons">
-      <label class="btn w-100 btn-light <%= "active" if cardio_report.activity_type == "treadmill" %>">
-        <%= radio_button_tag("cardio_report[activity_type]", "treadmill", cardio_report.activity_type == "treadmill") %>
+      <label class="btn w-100 btn-light <%= "active" if cardio_report.run_treadmill? %>">
+        <%= radio_button_tag("cardio_report[activity_type]", "run_treadmill", cardio_report.run_treadmill?) %>
         <%= image_tag("icons8-treadmill-96.png", size:"24x24", title: "Treadmill") %>
       </label>
-      <label class="btn w-100 btn-light <%= "active" if cardio_report.activity_type == "running" %>">
-        <%= radio_button_tag("cardio_report[activity_type]", "running", cardio_report.activity_type == "running") %>
+      <label class="btn w-100 btn-light <%= "active" if cardio_report.run_outdoors? %>">
+        <%= radio_button_tag("cardio_report[activity_type]", "run_outdoors", cardio_report.run_outdoors?) %>
         <%= image_tag("icons8-running-96.png", size:"24x24", title: "Treadmill") %>
       </label>
-      <label class="btn w-100 btn-light <%= "active" if cardio_report.activity_type == "hiking" %>">
-        <%= radio_button_tag("cardio_report[activity_type]", "hiking", cardio_report.activity_type == "hiking")%>
+      <label class="btn w-100 btn-light <%= "active" if cardio_report.hike? %>">
+        <%= radio_button_tag("cardio_report[activity_type]", "hike", cardio_report.hike?)%>
         <%= image_tag("icons8-trekking-96.png", size:"24x24", title: "Treadmill") %>
       </label>
     </div>
