Use grade instead of feet per mile

--- a/app/views/cardio_reports/_card.html.erb
+++ b/app/views/cardio_reports/_card.html.erb
@@ -29,8 +29,8 @@
       <% unless cardio_report.hike? %><td>Duration</td><% end %>
       <td>Distance</td>
       <% unless cardio_report.hike? %><td>Speed</td><% end %>
-      <% if cardio_report.hike? && cardio_report.gain_feet_per_mile %>
-        <td>Gain</td>
+      <% if cardio_report.hike? && cardio_report.elevation_grade %>
+        <td>Grade</td>
       <% end %>
       <td>Calories</td>
     </tr>
@@ -42,8 +42,8 @@
       <% unless cardio_report.hike? %>
         <td><b><%= '%.1f' % cardio_report.speed %></b> mph</td>
       <% end %>
-      <% if cardio_report.hike? && cardio_report.gain_feet_per_mile %>
-        <td><b><%= cardio_report.gain_feet_per_mile.to_i %></b> ft/mi</td>
+      <% if cardio_report.hike? && cardio_report.elevation_grade %>
+        <td><b><%= '%.1f' % (cardio_report.elevation_grade * 100) %></b>%</td>
       <% end %>
       <td><b><%= cardio_report.calories.to_i %></b> kcal</td>
     </tr>
