--- a/app/views/cardio_reports/_card.html.erb
+++ b/app/views/cardio_reports/_card.html.erb
@@ -43,7 +43,7 @@
         <td><b><%= '%.1f' % cardio_report.speed %></b> mph</td>
       <% end %>
       <% if cardio_report.hike? && cardio_report.elevation_grade %>
-        <td><b><%= '%.1f' % (cardio_report.elevation_grade * 100) %></b>%</td>
+        <td><b><%= (cardio_report.elevation_grade * 100).to_i %></b>%</td>
       <% end %>
       <td><b><%= cardio_report.calories.to_i %></b> kcal</td>
     </tr>
