--- a/app/views/cardio_reports/_form.html.erb
+++ b/app/views/cardio_reports/_form.html.erb
@@ -23,8 +23,18 @@
       </label>
     </div>
   </div>
-  
-  <div id="duration-input">
+
+  <label>Distance</label>
+  <div class="row">
+    <div class="input-group mb-3 col-lg-4">
+      <%= number_field(:cardio_report, :distance_miles, step: 0.1, class: "form-control") %>
+      <div class="input-group-append">
+        <span class="input-group-text">miles</span>
+      </div>
+    </div>
+  </div>
+
+  <div id="running-inputs">
     <label>Duration</label>
     <div class="row">
       <div class="btn-group mb-3 col-lg-4">
@@ -44,24 +54,22 @@
       </div>
     </div>
   </div>
-
   
-  <label>Distance</label>
-  <div class="row">
-    <div class="input-group mb-3 col-lg-4">
-      <%= number_field(:cardio_report, :distance_miles, step: 0.1, class: "form-control") %>
-      <div class="input-group-append">
-        <span class="input-group-text">miles</span>
+  <div id="hiking-inputs">
+    <label>Elevation Gain</label>
+    <div class="row">
+      <div class="input-group mb-3 col-lg-4">
+        <%= number_field(:cardio_report, :elevation_gain_feet, step: 1, class: "form-control") %>
+        <div class="input-group-append">
+          <span class="input-group-text">feet</span>
+        </div>
       </div>
     </div>
-  </div>
 
-  <label>Elevation Gain</label>
-  <div class="row">
-    <div class="input-group mb-3 col-lg-4">
-    <%= number_field(:cardio_report, :elevation_gain_feet, step: 1, class: "form-control") %>
-      <div class="input-group-append">
-        <span class="input-group-text">feet</span>
+    <label>Location</label>
+    <div class="row">
+      <div class="input-group mb-3 col-lg-4">
+        <%= text_field(:cardio_report, :location, class: "form-control") %>
       </div>
     </div>
   </div>
@@ -82,12 +90,14 @@
 
   function setVisibilityForType() {
     if ($("input[name='cardio_report[activity_type]']:checked").val() == "hike") {
-      $("#duration-input").hide();
+      $("#hiking-inputs").show();
+      $("#running-inputs").hide();
       $("#cardio_report_part_minutes, #cardio_report_part_seconds").val(null)
     } else {
       $("#cardio_report_part_minutes").val(<%= @cardio_report.duration&.part_minutes %>) 
       $("#cardio_report_part_seconds").val(<%= @cardio_report.duration&.part_seconds %>)
-      $("#duration-input").show();
+      $("#hiking-inputs").hide();
+      $("#running-inputs").show();
     }
   }
 </script>
