--- a/app/views/cardio_reports/_card_run_table.html.erb
+++ b/app/views/cardio_reports/_card_run_table.html.erb
@@ -7,7 +7,7 @@
   </tr>
   <tr>
     <td><b><%= '%.1f' % cardio_report.distance_miles %></b> miles</td>
-    <td><b><%= cardio_report.duration.strftime('%M:%S') %></b></td>
+    <td><b><%= strftime_duration(cardio_report.duration) %></b></td>
     <td><b><%= '%.1f' % cardio_report.speed %></b> mph</td>
     <td><b><%= cardio_report.calories.to_i %></b> kcal</td>
   </tr>
